--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,6 +14,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      # Step 1.1: Install dependencies
+      - name: Install dependencies
+        run: npm install
+        
+      # Step 1.2: Run next lint
+      - name: Run next lint
+        run: npx next lint
+
       # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
