--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,7 +6,7 @@ on:
       - assignment/japan
 
 jobs:
-  docker:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,11 +17,15 @@ jobs:
       # Step 1.1: Install dependencies
       - name: Install dependencies
         run: npm install
-        
+
       # Step 1.2: Run next lint
       - name: Run next lint
         run: npx next lint
-
+  
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
       # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
