--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
+      # Step 1: Checkout source code
+      - name: Checkout code
+        uses: actions/checkout@v3
       # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
