--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,5 +45,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          platform: linux/amd64,linux/arm64
           push: true
           tags: farhansabbir/next-japan:latest
