--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: View contents of hello.txt
+name: Module 7 Assignment - Japan (CI using GHA)
 
 on:
   push:
@@ -10,15 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout source code
+
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 1.1: Install dependencies
       - name: Install dependencies
         run: npm install
 
-      # Step 1.2: Run next lint
       - name: Run next lint
         run: npx next lint
   
@@ -26,22 +24,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      # Step 1: Checkout source code
+
       - name: Checkout code
         uses: actions/checkout@v3
-      # Step 2: Set up Docker Buildx
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # Step 3: Log in to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      # Step 4: Define Image Tags and Metadata
-      # This step generates tags like 'farhansabbir/next-japan:latest' and 'farhansabbir/next-japan:c8a74e9' (commit SHA)
       - name: Define Image Tags
         id: meta
         uses: docker/metadata-action@v5
@@ -50,15 +45,13 @@ jobs:
           tags: |
             type=raw,value=latest
 
-      # Step 5: Build and push multi-platform image
+
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
-          # Define the target platforms, including linux/amd64 (for x86) and linux/arm64
           platforms: linux/amd64,linux/arm64 
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          # Enable caching for faster rebuilds
           cache-from: type=gha
           cache-to: type=gha,mode=max
