--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,8 +1,10 @@
+apiVersion: v1
 kind: Namespace
 metadata:
   name: ostad
 
 ---
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: japan-deployment
