--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,13 +1,14 @@
+apiVersion: v1
 kind: Service
 metadata:
   name: japan-service
   namespace: ostad
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: japan
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
-      nodePort: 30000
+      # nodePort: 30000
