--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,8 +2,8 @@ name: Module 7 Assignment - Japan (CI using GHA)
 
 on:
   push:
-    branches:
-      - assignment/japan
+    # branches:
+    #   - assignment/japan
     tags:
       - 'v*.[0-9].[0-9]*'
 
