added extra configs in the kind cluster nodes for it to expose the service port outside

--- a/k8s/kind-cluster.yaml
+++ b/k8s/kind-cluster.yaml
@@ -5,5 +5,9 @@ name: ostad-ec2-kind-cluster
 
 nodes:
   - role: control-plane
+    extraPortMappings:
+      - containerPort: 30000
+        hostPort: 30000
+        listenAddress: "0.0.0.0"
   - role: worker
   - role: worker
