--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -4,11 +4,11 @@ metadata:
   name: japan-service
   namespace: ostad
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: japan
   ports:
     - protocol: TCP
       port: 80
       targetPort: 3000
-      # nodePort: 30000
+      nodePort: 30000
